--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-All code is copyrighted by Seth Shelnutt 2012.
+All code is copyrighted by Seth Shelnutt, John Caruzzo, Jessica Green, 2012.
 All code in this repository is released under the GPL v3 or later.
 
 
